# verso

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: keymap.md  v1-followups.md
docs/superpowers/plans/: 2026-04-20-verso-v1-implementation.md
docs/superpowers/specs/: 2026-04-20-verso-design.md
migrations/: V1__initial.sql
src/: cli.rs  lib.rs  main.rs
src/config/: load.rs  mod.rs  schema.rs
src/export/: markdown.rs  mod.rs  writer.rs
src/reader/: anchor.rs  book.rs  cache.rs  linebreak.rs  mod.rs  page.rs  plaintext.rs  sanitize.rs  search.rs  styled.rs
src/store/: bookmarks.rs  books.rs  db.rs  highlights.rs  library_view.rs  migrate.rs  mod.rs  progress.rs
src/ui/: chrome.rs  library_app.rs  library_view.rs  mod.rs  reader_app.rs  reader_view.rs  terminal.rs
src/ui/keymap/: actions.rs  defaults.rs  keys.rs  mod.rs  table.rs
src/util/: logging.rs  mod.rs  paths.rs
tests/: anchor.rs  cache.rs  chrome.rs  config.rs  defaults.rs  epub_guard.rs  epub_meta.rs  export_markdown.rs  hashing.rs  highlights_delete.rs  keymap_cmd_action.rs  keymap_merge.rs  keymap_table.rs  keys.rs  library_reanchor_trigger.rs  library_scan.rs  library_scan_broken.rs  library_scan_softdelete.rs  library_view.rs  library_watch.rs  linebreak.rs  normalise.rs  page.rs  paths.rs  plaintext.rs  reader_load_spine.rs  reader_snapshots.rs  reanchor.rs  search.rs  store_bookmarks.rs  store_books.rs  store_highlights.rs  store_migrate.rs  store_progress.rs  styled.rs
tests/fixtures/: LICENSE.md  time-machine.epub
tests/snapshots/: export_markdown__renders_frontmatter_and_quotes.snap  reader_snapshots__time_machine_chapter_1_at_68_dark.snap
