[package]
name = "verso"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A terminal EPUB reader with vim keys and Markdown highlight export"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<tbd>/verso"
readme = "README.md"

[lib]
name = "verso"
path = "src/lib.rs"

[[bin]]
name = "verso"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"                         # XDG paths
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
refinery-core = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
crossbeam-channel = "0.5"
ratatui = "0.27"
crossterm = "0.27"
rbook = "0.5"
scraper = "0.19"
ammonia = "4"
textwrap = "0.16"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"
unicode-segmentation = "1"
hyphenation = { version = "0.8", features = ["embed_en-us"] }
notify = "6"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
zip = "0.6"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
zip = "0.6"

